# smart-keymap

./: .devcontainer.json  .devenv.flake.nix  .gitignore  CONTRIBUTING.md  Cargo.toml  Gemfile  LICENSE-MIT  Makefile  README.MD  build.rs  cbindgen.toml  devenv.nix  devenv.yaml  justfile  meson.build  release.toml
firmware/ch32x035-usb-device-compositekm-c/: .devcontainer.json  .envrc  .gitignore  CMakeLists.txt  Makefile  README.MD  devenv.nix  devenv.yaml  justfile
firmware/ch32x035-usb-device-compositekm-c/User/: CMakeLists.txt  ch32x035_conf.h  ch32x035_it.c  ch32x035_it.h  ch32x035_usbfs_device.c  ch32x035_usbfs_device.h  keyboard_ch32x.h  main.c  system_ch32x035.c  system_ch32x035.h  usb_desc.c  usb_desc.h  usbd_composite_km.c  usbd_composite_km.h  usbd_compostie_km.c
firmware/ch32x035-usb-device-compositekm-c/app/: ch32x035_it.c  main.c  system_ch32x035.h  usb_desc.h  usbd_composite_km.c
firmware/ch32x035-usb-device-compositekm-c/keyboard/: CMakeLists.txt  keyboard.c  keyboard_gpio.c  keyboard_gpio.h  keyboard_led.c  keyboard_led.h  keyboard_matrix.c  keyboard_matrix.h  keyboard_split.c  keyboard_split.h  keyboard_split_rx_dma.c  keyboard_split_tx_dma.c  keyboard_touchkey.c  keyboard_touchkey.h  ncl.mk
firmware/ch32x035-usb-device-compositekm-c/keyboard/matrix/: col_to_row.c  row_to_col.c  touchkey_mutual.c
firmware/ch32x035-usb-device-compositekm-c/keyboard/ncl/keyboard/: contracts.ncl  debug.ncl  gpio.ncl  keyboard.ncl  keyboard_gpio.ncl  keyboard_led.ncl  keyboard_matrix.ncl  keyboard_split.ncl  usart.ncl
firmware/ch32x035-usb-device-compositekm-c/libsmartkeymap/: .gitignore  CMakeLists.txt
firmware/ch32x035-usb-device-compositekm-c/ncl/: ch32x-36-lhs.ncl  ch32x-36-rhs.ncl  ch32x-48.ncl  ch32x-75.ncl  codegen-matrix-col_to_row.ncl  codegen-matrix-row_to_col.ncl  codegen.ncl  codegen_keyboard.ncl  contracts.ncl  matrix_scan.ncl  ncl.mk  test-actual-ch32x-48.ncl  test-expected-ch32x-48.ncl  weact-ch32x-core-board.ncl
firmware/ch32x035-usb-device-compositekm-c/ncl/boards/: ch32x-36-lhs.ncl  ch32x-36-rhs.ncl  ch32x-48.ncl  ch32x-75.ncl  ch32x-tc-2x4.ncl  weact-ch32x-core-board.ncl
firmware/ch32x035-usb-device-compositekm-c/ncl/codegen/: contracts.ncl  debug.ncl  keyboard.ncl  keyboard_led.ncl  keyboard_matrix.ncl  keyboard_split.ncl  matrix-col_to_row.ncl
firmware/ch32x035-usb-device-compositekm-c/scripts/: board-stamp.sh
firmware/ch32x035-usb-device-compositekm-c/sdk/: CMakeLists.txt
firmware/ch32x035-usb-device-compositekm-c/sdk/Core/: core_riscv.c  core_riscv.h
firmware/ch32x035-usb-device-compositekm-c/sdk/Debug/: CMakeLists.txt  debug.c  debug.h
firmware/ch32x035-usb-device-compositekm-c/sdk/Ld/: CMakeLists.txt
firmware/ch32x035-usb-device-compositekm-c/sdk/Peripheral/: CMakeLists.txt
firmware/ch32x035-usb-device-compositekm-c/sdk/Startup/: CMakeLists.txt
firmware/ch58x-ble-hid-keyboard-c/: .envrc  .gitignore  CMakeLists.txt  Makefile  README.MD  devenv.nix  devenv.yaml  flash.c  flash_doc.md  justfile
firmware/ch58x-ble-hid-keyboard-c/APP/: CMakeLists.txt  hidkbd.c  hidkbd_main.c
firmware/ch58x-ble-hid-keyboard-c/APP/include/: hidkbd.h  keyboard_wabble60.h  smart_keyboard.h
firmware/ch58x-ble-hid-keyboard-c/Profile/: CMakeLists.txt  battservice.c  devinfoservice.c  hiddev.c  hidkbdservice.c  scanparamservice.c
firmware/ch58x-ble-hid-keyboard-c/Profile/include/: battservice.h  devinfoservice.h  hiddev.h  hidkbdservice.h  scanparamservice.h
firmware/ch58x-ble-hid-keyboard-c/keyboard/: CMakeLists.txt  keyboard.c  keyboard.h  keyboard_gpio.c  keyboard_gpio.h  keyboard_matrix.c  keyboard_matrix.h
firmware/ch58x-ble-hid-keyboard-c/keyboard/matrix/: col_to_row.c
firmware/ch58x-ble-hid-keyboard-c/ncl/: codegen-matrix-col_to_row.ncl  codegen.ncl  codegen_keyboard.ncl  matrix_scan.ncl  test-actual-wabble-60.ncl  test-expected-wabble-60.ncl  wabble-60.ncl
firmware/ch58x-ble-hid-keyboard-c/ncl/boards/: wabble-60-with-debug.ncl  wabble-60.ncl
firmware/ch58x-ble-hid-keyboard-c/ncl/codegen/: contracts.ncl  debug.ncl  gpio.ncl  keyboard.ncl  keyboard_matrix.ncl  uart.ncl
firmware/ch58x-ble-hid-keyboard-c/scripts/: wchisp-await-bootloader.sh
firmware/ch58x-ble-hid-keyboard-c/sdk/: CMakeLists.txt
firmware/ch58x-ble-hid-keyboard-c/sdk/BLE/: CMakeLists.txt
firmware/ch58x-ble-hid-keyboard-c/sdk/RVMSIS/: CMakeLists.txt
firmware/ch58x-ble-hid-keyboard-c/sdk/Startup/: CMakeLists.txt
firmware/ch58x-ble-hid-keyboard-c/sdk/StdPeriphDriver/: CMakeLists.txt
keyberon-smart-keyboard/: Cargo.toml
keyberon-smart-keyboard/src/: input.rs  lib.rs  matrix.rs
keyberon-smart-keyboard/src/input/: smart_keymap.rs
ncl/: checks.ncl  (+18 more)
rp2040-rtic-smart-keyboard/: Cargo.toml  build.rs  justfile
rp2040-rtic-smart-keyboard/examples/: board-pico42.ncl  pico42.rs
rp2040-rtic-smart-keyboard/ncl/: codegen.ncl
rp2040-rtic-smart-keyboard/ncl/codegen/: board.ncl  contracts.ncl  gpio.ncl
rp2040-rtic-smart-keyboard/scripts/: deploy.sh
rp2040-rtic-smart-keyboard/src/: app_init.rs  app_prelude.rs  common.rs  input.rs  lib.rs  main.rs
smart-keymap-macros/: Cargo.toml  build.rs
smart-keymap-macros/src/: lib.rs
smart-keymap-macros/tests/: tests.rs
smart-keymap-macros/tests/ui/: 01-pass.rs  02-fail-nickel-error.rs  02-fail-nickel-error.stderr
smart_keymap/: Cargo.toml
smart_keymap/src/: lib.rs
stm32-embassy-smart-keyboard/: Cargo.toml  build.rs
stm32-embassy-smart-keyboard/examples/: minif4_36-rev2021_5-lhs.rs  minif4_36-rev2021_5-rhs.rs
stm32-embassy-smart-keyboard/src/: main.rs
stm32f4-rtic-smart-keyboard/: Cargo.toml  build.rs
stm32f4-rtic-smart-keyboard/examples/: minif4_36-rev2021_4-lhs.rs  minif4_36-rev2021_4-rhs.rs
stm32f4-rtic-smart-keyboard/src/: app_init.rs  app_prelude.rs  common.rs  input.rs  lib.rs  main.rs
stm32f4-rtic-smart-keyboard/src/split/: app_init.rs  app_prelude.rs  transport.rs
usbd-smart-keyboard/: .embed.toml  Cargo.toml  justfile
usbd-smart-keyboard/src/: common.rs  input.rs  lib.rs  matrix.rs  split.rs
usbd-smart-keyboard/src/input/: smart_keymap.rs
usbd-smart-keyboard/src/split/: transport.rs
(+386 files in other folders)
