[workspace]

members = [
    "smart-keymap-nickel-helper",
]

[package]
name = "smart-keymap"
version = "0.1.0"
edition = "2021"

[features]
default = ["std", "staticlib"]
std = ["serde/std"]
staticlib = []

[lib]
name = "smart_keymap"
crate-type = ["lib"]

[[test]]
name = "cucumber-keymap"
path = "tests/cucumber/keymap.rs"
harness = false

[dependencies]
heapless = { version = "0.8", features = ["serde"] }
libc = "0.2"
paste = "1.0"
seq-macro = "0.3"
serde = { version = "1.0", features = ["derive"], default-features = false }

[dev-dependencies]
cucumber = "0.21"
ron = "0.8"
serde_json = "1.0"
futures = "0.3"

[build-dependencies]
smart-keymap-nickel-helper = { path = "./smart-keymap-nickel-helper" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
