[workspace]

members = [
    "rp2040-rtic-smart-keyboard",
    "smart-keymap-nickel-helper",
    "smart_keymap",
    "stm32f4-rtic-smart-keyboard",
    "usbd-smart-keyboard",
]

[package]
name = "smart-keymap"
version = "0.6.0-dev"
edition = "2021"

[features]
default = ["std"]
std = ["serde/std", "dep:serde_json"]

[lib]
name = "smart_keymap"
crate-type = ["lib"]

[[test]]
name = "rust-integration"
path = "tests/rust/keymap.rs"

[[test]]
name = "cucumber-keymap"
path = "tests/cucumber/keymap.rs"
harness = false

[dependencies]
heapless = { version = "0.8", features = ["serde"] }
libc = "0.2"
paste = "1.0"
postcard = "1.1"
seq-macro = "0.3"
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
cucumber = "0.21"
ron = "0.8"
futures = "0.3"

smart-keymap-nickel-helper = { path = "./smart-keymap-nickel-helper" }

[build-dependencies]
smart-keymap-nickel-helper = { path = "./smart-keymap-nickel-helper" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
