[workspace]

members = [
    "keyberon-smart-keyboard",
    "rp2040-rtic-smart-keyboard",
    "smart-keymap-macros",
    "smart-keymap-nickel-helper",
    "smart_keymap",
    "stm32-embassy-smart-keyboard",
    "stm32f4-rtic-smart-keyboard",
]

[package]
name = "smart-keymap"
version = "0.10.0-dev"
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
default = ["std"]
std = ["serde/std", "dep:serde_json"]

[lib]
name = "smart_keymap"
crate-type = ["lib"]

[[bin]]
name = "sizes"
required-features = ["std"]

# [[test]]
# name = "rust-integration"
# path = "tests/rust/keymap.rs"

# [[test]]
# name = "cucumber-keymap"
# path = "tests/cucumber/keymap.rs"
# harness = false

[dependencies]
heapless = { version = "0.8", features = ["serde"] }
libc = "0.2"
paste = "1.0"
postcard = "1.1"
seq-macro = "0.3"
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
cucumber = "0.21"
ron = "0.8"
futures = "0.3"

smart-keymap-macros = { path = "./smart-keymap-macros" }
smart-keymap-nickel-helper = { path = "./smart-keymap-nickel-helper" }

[build-dependencies]
smart-keymap-nickel-helper = { path = "./smart-keymap-nickel-helper" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
