[package]
name = "keyberon-smart-keyboard"
version = "0.11.0"
license = "MIT OR Apache-2.0"
authors = ["Richard Goulter <richard.goulter@gmail.com>"]
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = { version = "0.7", features = ["device"] }
cortex-m-rtic = "1.0"
keyberon = { git = "https://github.com/TeXitoi/keyberon", branch = "master" }
embedded-hal = "1.0"
fugit = "0.3.7"
frunk = { version = "0.4", default-features = false }
generic-array = "0.14"
heapless = "0.8"
nb = "1.1"
panic-halt = "0.2.0"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = "0.4"

# smart-keymap = { git = "https://github.com/rgoulter/smart-keymap.git" }
smart-keymap = { path = "..", default-features = false }
