[package]
name = "smart_keymap"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lib]
crate-type = ["staticlib"]

[features]
# For building/testing staticlib on
#  targets with std (e.g. x86_64-linux),
#  the staticlib should be built with std.
default = ["std"]
std = ["smart-keymap/std"]

[dependencies]
smart-keymap = { path = "..", default-features = false }
