[package]
edition = "2021"
name = "stm32-embassy-smart-keyboard"
version = "0.7.0-dev"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-stm32 = { version = "0.2.0", features = ["defmt", "stm32f401cc", "unstable-pac", "memory-x", "time-driver-tim4", "exti", "chrono"] }
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-usb = { version = "0.4.0", features = ["defmt" ] }
embassy-futures = { version = "0.1.0" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
usbd-hid = "0.8.1"

