[package]
name = "stm32f4-rtic-smart-keyboard"
version = "0.9.0"
license = "MIT OR Apache-2.0"
authors = ["Richard Goulter <richard.goulter@gmail.com>"]
edition = "2021"

[dependencies]
embedded-hal = "1.0"
embedded-hal-nb = "1.0"
stm32f4xx-hal = { version = "0.22", features = ["rtic1", "stm32f401", "usb_fs"] }
systick-monotonic = "1.0.0"

cortex-m = "0.7"
cortex-m-rt = { version = "0.7", features = ["device"] }
cortex-m-rtic = "1.0"
keyberon = { git = "https://github.com/TeXitoi/keyberon", branch = "master" }
fugit = "0.3.7"
frunk = { version = "0.4", default-features = false }
generic-array = "0.14"
heapless = "0.7"
nb = "1.1"
panic-halt = "0.2.0"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = "0.4"
usb-device = { version = "0.3", features = ["control-buffer-256"] }
usbd-human-interface-device = "0.5"
usbd-serial = "0.2"

keyberon-smart-keyboard = { path = "../keyberon-smart-keyboard" }
# smart-keymap = { git = "https://github.com/rgoulter/smart-keymap.git" }
smart-keymap = { path = "..", default-features = false }

[build-dependencies]
smart-keymap-nickel-helper = { path = "../smart-keymap-nickel-helper" }
